--- a/src/sass/partials/_footer.scss
+++ b/src/sass/partials/_footer.scss
@@ -182,8 +182,13 @@
     margin-top: 0px;
     margin-bottom: 0px;
 
+    @include tablet {
+      font-size: 14px;
+    }
+
     @include desktop {
       padding-bottom: 60px;
+      font-size: 16px;
     }
   }
   &__contact-link {
@@ -206,12 +211,14 @@
       margin-top: 12px;
       margin-bottom: 0px;
       text-align: center;
+      max-width: 298px;
     }
     @media screen and (min-width: 1200px) {
       margin-top: 12px;
       padding-bottom: 12px;
       flex-wrap: wrap;
       margin: 0 auto;
+      font-size: 12px;
     }
   }
 }
