--- a/src/sass/partials/_advantages.scss
+++ b/src/sass/partials/_advantages.scss
@@ -79,10 +79,12 @@ ul {
     font-style: normal;
     font-weight: 400;
     line-height: 176%;
-    margin-bottom: 81px;
+    margin-bottom: -20px;
+    //margin-bottom: 81px;
     @include tablet {
       font-size: 14px;
       line-height: 174%;
+      margin-bottom: 30px;
     }
     @include desktop {
       font-size: 16px;
