--- a/src/sass/partials/_gallery.scss
+++ b/src/sass/partials/_gallery.scss
@@ -130,6 +130,7 @@
   margin: 0 auto;
   max-width: 600px;
   margin-bottom: 20px;
+  max-width: 280px;
   //max-height: 300px;
 
   @include tablet {
