--- a/src/sass/partials/_contacts.scss
+++ b/src/sass/partials/_contacts.scss
@@ -210,6 +210,7 @@
     font-family: 'Montserrat', sans-serif;
     color: #d6936d;
     text-decoration: none;
+    letter-spacing: 0.04em;
 
     @include tablet {
       font-size: 14px;
