--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -3,12 +3,12 @@
     <ul class="contacts__list">
       <li class="contacts__item">
         <button class="contacts__header">cafe</button>
-        <address class="address">
+        <p class="address">
           <span class="address__header">Chicago</span><br />
           <a class="address__link" href="https://goo.gl/maps/STne4sjAjZ7zSHTR6"
             >10340 Ridgeland Ave, Chicago Ridge, IL 60415, USA</a
           >
-        </address>
+        </p>
         <div class="contacts__line"></div>
         <ul class="contacts__opening">
           <li class="contacts__days">
@@ -26,12 +26,12 @@
       </li>
       <li class="contacts__item">
         <button class="contacts__header">foodtrack</button>
-        <address class="address">
+        <p class="address">
           <span class="address__header">Los Angeles</span><br />
           <a class="address__link" href="https://goo.gl/maps/VBDssGxzNaqiNqQP7"
             >1003 Manhattan Ave, Manhattan Beach, CA 90263, USA</a
           >
-        </address>
+        </p>
         <div class="contacts__line"></div>
         <ul class="contacts__opening">
           <li class="contacts__days">
@@ -49,12 +49,12 @@
       </li>
       <li class="contacts__item">
         <button class="contacts__header">cafe</button>
-        <address class="address">
+        <p class="address">
           <span class="address__header">New York</span><br />
           <a class="address__link" href="https://goo.gl/maps/vRBaTHnEo7QvAA4T8"
             >726 Sterling Pl, Brooklyn, NY 11222, USA</a
           >
-        </address>
+        </p>
         <div class="contacts__line"></div>
         <ul class="contacts__opening">
           <li class="contacts__days">
