--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -35,7 +35,7 @@
           </picture>
         </div>
         <h3 class="products__name">ice cream</h3>
-        <div class="products__flex-container">
+        <div class="products__flex-container products__flex-container--gap">
           <p class="products__text">
             Soft ice cream with a delicate taste. Made with milk, cream, sugar and natural
             stabilizer
