--- a/src/sass/partials/_advantages.scss
+++ b/src/sass/partials/_advantages.scss
@@ -4,10 +4,25 @@ ul {
 .advantages {
   background-color: #84a178;
   color: #fcfcfc;
-  padding-top: 60px;
+  padding-top: 50px;
   padding-bottom: 48px;
   display: block;
   margin: 0 auto;
+  padding-bottom: 68px;
+
+  @include mobile {
+    padding-top: 60px;
+    padding-bottom: 81px;
+  }
+
+  @include tablet {
+    padding-top: 80px;
+    padding-bottom: 91px;
+  }
+
+  @include desktop {
+    padding-bottom: 102px;
+  }
 }
 .advantages-container {
   max-width: 480px;
@@ -38,6 +53,12 @@ ul {
   gap: 28px;
   align-items: center;
   padding: 0;
+  margin-top: 0px;
+  margin-bottom: 0px;
+
+  @include mobile {
+    gap: 32px;
+  }
 
   @include tablet {
     gap: 32px;
@@ -62,7 +83,13 @@ ul {
     font-weight: bold;
     margin-top: 22px;
     margin-bottom: 16px;
+
+    @include mobile {
+      margin-top: 16px;
+    }
+
     @include tablet {
+      margin-bottom: 12px;
       font-size: 48px;
       letter-spacing: 1.92px;
     }
@@ -80,14 +107,19 @@ ul {
     font-weight: 400;
     line-height: 176%;
     margin-bottom: -20px;
+    width: 230px;
     //margin-bottom: 81px;
     @include tablet {
       font-size: 14px;
       line-height: 174%;
       margin-bottom: 30px;
+      width: 152px;
+      margin-top: 12px;
     }
     @include desktop {
       font-size: 16px;
+      width: 260px;
+      margin-top: 12px;
     }
   }
   &__element {
@@ -120,7 +152,7 @@ ul {
   margin: 0 auto;
 }
 figure {
-  max-width: 230px;
+  margin-top: 0px;
 
   @include tablet {
     max-width: 152px;
