--- a/src/sass/partials/_products.scss
+++ b/src/sass/partials/_products.scss
@@ -170,6 +170,9 @@ ul {
     margin: 0 auto;
     display: flex;
     cursor: pointer;
+    @include tablet {
+      margin-bottom: 30px;
+    }
     @include desktop {
       margin-bottom: 64;
     }
