--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,47 +1,47 @@
 <section class="advantages">
-  <div class="advantages-container">
-    <h2 class="advantages-header">advantages</h2>
-    <ul class="advantages-list">
-      <li class="advantages-list__element">
-        <figure>
-          <div class="advantages-icon">
+  <div class="advantages__container">
+    <h2 class="advantages__header">advantages</h2>
+    <ul class="advantages__list">
+      <li class="advantages__element">
+        <figure class="advantages__figure">
+          <div class="advantages__icon">
             <svg width="36" height="36">
               <use href="./images/icons-ice_cream.svg#icon-cow"></use>
             </svg>
           </div>
           <figcaption>
-            <p class="advantages-list__number">721</p>
-            <p class="advantages-list__text">
+            <p class="advantages__number">721</p>
+            <p class="advantages__text">
               Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
             </p>
           </figcaption>
         </figure>
       </li>
-      <li class="advantages-list__element">
-        <figure>
-          <div class="advantages-icon">
+      <li class="advantages__element">
+        <figure class="advantages__figure">
+          <div class="advantages__icon">
             <svg width="36" height="36">
               <use href="./images/icons-ice_cream.svg#icon-weight"></use>
             </svg>
           </div>
           <figcaption>
-            <p class="advantages-list__number">16kg</p>
-            <p class="advantages-list__text">
+            <p class="advantages__number">16kg</p>
+            <p class="advantages__text">
               Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
             </p>
           </figcaption>
         </figure>
       </li>
-      <li class="advantages-list__element">
-        <figure>
-          <div class="advantages-icon">
+      <li class="advantages__element">
+        <figure class="advantages__figure">
+          <div class="advantages__icon">
             <svg width="36" height="36">
               <use href="./images/icons-ice_cream.svg#icon-ice-crema"></use>
             </svg>
           </div>
           <figcaption>
-            <p class="advantages-list__number">84</p>
-            <p class="advantages-list__text">
+            <p class="advantages__number">84</p>
+            <p class="advantages__text">
               Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
             </p>
           </figcaption>
