--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -79,7 +79,7 @@
           </picture>
         </div>
         <h3 class="products__name">ice coffee</h3>
-        <div class="products__flex-container">
+        <div class="products__flex-container products__flex-container--gap-small">
           <p class="products__text">
             Fragrant invigorating drink created from 100% natural ingredients without the use of
             preservatives and flavor enhancers
